2006-11-21  Akim Demaille  <demaille@gostai.com>

	"*foo." -> "foo->"
	* build-aux/reindent: Do that.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	restyle returns too
	* reindent: Handle returns.
	(&update_file): New, from Automake.
	Use it to save cycles.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix check.mk
	* check.mk: Add missing backslash.
	* svn-externals.mk: Fix.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	* urbi-sdk.m4: Check the tarball name.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Adjust to liburbi-c++ renamed as urbi-sdk
	* README, param-pc.mk.in, urbi-dirs.m4, urbi-sdk.m4: Adjust.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	* check.mk: If VERBOSE, dump the logs.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix svn up
	* svn-externals: here.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Simplify the creation of libport/config.h
	* config-headers-prefixed.mk: No longer try to work from
	another Makefile.am that the top-level's one.
	* urbi-config-headers-prefixed.m4: Simplify accordingly.
	* test.sh.in: Formatting changes.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	* check.mk: Pass -Wno-override in check.mk.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Support SVN_EXTERNALS_PROXY
	* svn-externals.mk: here.
	* check.mk: Specify -Wno-portability.
	* init.mk: Initialize AUTOMAKE_OPTIONS.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Simplify more if/while
	* reindent (&strip_parens): New.
	Use it to simplify more if patterns.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	param-pc.mk.in
	* param-pc.mk.in: New.
	From liburbi-cpp/sdk
	* urbi-sdk.m4: Adjust: chose the right precursor of param.mk.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	use set -e
	* bootstrap: here.
	Adjust the code to avoid false failures.

2006-11-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add an M4 macro to easily disable debugging.
	* disable-debug.m4: New.
